--- a/src/pages/Home/AcademyList/AcademyListItem/AcademyListItem.module.scss
+++ b/src/pages/Home/AcademyList/AcademyListItem/AcademyListItem.module.scss
@@ -26,7 +26,7 @@
     }
 
     @include mobile-only {
-      left: toRem(20);
+      left: toRem(-40);
       transform: rotate(-65deg);
     }
   }
@@ -38,20 +38,20 @@
     width: toRem(191);
 
     @include tablet-landscape {
-      bottom: toRem(230);
+      bottom: toRem(200);
       left: unset;
-      right: toRem(0);
+      right: toRem(-20);
     }
 
     @include tablet-portrait {
-      bottom: toRem(280);
-      right: toRem(-40);
+      bottom: toRem(260);
+      right: toRem(-60);
       transform: rotate(-25deg);
     }
 
     @include mobile-only {
       bottom: toRem(85);
-      right: toRem(20);
+      right: toRem(-40);
       transform: rotate(-15deg);
     }
   }
@@ -70,12 +70,13 @@
     }
 
     @include tablet-portrait {
-      bottom: toRem(360);
+      bottom: toRem(380);
+      left: toRem(-40);
     }
 
     @include mobile-only {
       bottom: toRem(160);
-      left: toRem(30);
+      left: toRem(-30);
       transform: rotate(25deg);
     }
   }
@@ -115,7 +116,7 @@
 
     @include tablet-landscape {
       right: toRem(-20);
-      top: toRem(370);
+      top: toRem(340);
       transform: rotate(-35deg);
     }
 
@@ -125,7 +126,7 @@
     }
 
     @include mobile-only {
-      right: toRem(20);
+      right: toRem(-50);
       top: toRem(460);
       transform: rotate(-75deg);
     }
@@ -151,8 +152,8 @@
     }
 
     @include mobile-only {
-      left: toRem(-40);
-      top: toRem(200);
+      left: toRem(-110);
+      top: toRem(180);
       transform: rotate(-56deg);
     }
   }
@@ -171,7 +172,7 @@
     }
 
     @include mobile-only {
-      right: toRem(15);
+      right: toRem(-40);
       top: toRem(80);
       transform: rotate(95deg);
     }
@@ -201,12 +202,12 @@
     }
 
     @include tablet-portrait {
-      left: toRem(-140);
+      left: toRem(-170);
     }
 
     @include mobile-only {
-      left: toRem(-80);
-      top: toRem(350);
+      left: toRem(-130);
+      top: toRem(400);
       transform: rotate(72deg);
     }
   }
